# claude-engram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  karpathy-scout-sebastianbreguel-claude-engram.md  pyproject.toml  repo-scout-sebastianbreguel-claude-engram.md  uninstall.sh
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
demo/: README.md  engram-hero.html  scale-beat.html  session-flow.html
docs/: architecture.md  cli-reference.md  privacy.md
docs/plans/: 2026-04-27-001-feat-pre-launch-readiness-sprint-plan.md  2026-04-27-002-refactor-drop-redundant-tool-cli-scaffolding-plan.md
eval/: corrections_sample.md
hooks/: hooks.json  memcompact-hook.sh  mempatterns-hook.sh
tests/: test_e2e.py  test_engram_cli.py  test_memdoctor.py  test_mempatterns.py
tests/fixtures/: sample_transcript.jsonl
tools/: engram.py  eval_corrections.py  memcapture.py  memcompile.py  memdashboard.py  memdoctor.py  mempatterns.py
