[project]
name = "claude-engram"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# E501 in prompts, SQL inserts, and formatted output strings — wrapping hurts readability/grep-ability
"tools/engram.py" = ["E501"]
"tools/memcapture.py" = ["E501"]
"tests/test_e2e.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
